# GSpotify

./: README.md  alembic.ini  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  cli.py  config.py  database.py  local_file_service.py  logging_config.py  main.py  s3_service.py
app/models/: album.py  artist_profile.py  comment.py  genre.py  liked_song.py  lyrics.py  playlist.py  song.py  user.py
app/routers/: admin.py  artist.py  auth.py  files.py  misc.py  songs.py  users.py
app/schemas/: __init__.py  album.py  auth.py  comment.py  genre.py  lyrics.py  playlist.py  song.py  user.py
docs/: API_Quickstart.md  Auth_RBAC.md  Data_Model.md  Frontend_Guide.md  Overview.md  Troubleshooting.md
frontend/: README.md  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  setupProxy.js
frontend/src/components/: OptimizedBrowse.tsx  TrackCard.tsx
frontend/src/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/player/: MusicPlayer.tsx
frontend/src/pages/: Browse.tsx  Dashboard.tsx  LikedSongs.tsx  PlaylistDetail.tsx  Playlists.tsx  Profile.tsx  Search.tsx  Settings.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  ManageUsers.tsx  PendingSongs.tsx
frontend/src/pages/artist/: AlbumManagement.tsx  ArtistDashboard.tsx  UploadSong.tsx
frontend/src/services/: adminService.ts  api.ts  artistService.ts  authService.ts  musicService.ts  userService.ts
frontend/src/store/: authStore.ts  playerStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatTime.ts
tests/: conftest.py  test_api.py
