[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gspotify-backend"
version = "1.0.0"
description = "GSpotify Backend API - Music streaming platform"
authors = [
    {name = "GSpotify Team"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.13",
    "uvicorn==0.34.3",
    "sqlalchemy==2.0.41",
    "alembic==1.16.2",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "email-validator==2.2.0",
    "python-jose==3.5.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.20",
    "boto3==1.38.44",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "httpx==0.28.1",
    "pytest-cov==6.2.1",
    "psycopg2-binary==2.9.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "basic: Basic endpoint tests",
    "auth: Authentication tests",
    "protected: Protected endpoint tests",
    "playlist: Playlist operation tests",
    "search: Search functionality tests",
    "rbac: Role-based access control tests",
    "error: Error scenario tests",
    "artist: Artist functionality tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "jose.*",
    "passlib.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true 